--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,26 @@ name = "pypi"
 
 [packages]
 django = "*"
+python-dotenv = "*"
+djangorestframework = "*"
+django-countries = "*"
+django-phonenumber-field = "*"
+phonenumbers = "*"
+drf-spectacular = "*"
+pillow = "*"
+argon2-cffi = "*"
+djoser = "*"
+django-filter = "*"
+django-celery-email = "*"
+django-celery-beat = "*"
+cloudinary = "*"
+python-dateutil = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
+watchfiles = "*"
+black = "*"
+flake8 = "*"
 
 [requires]
 python_version = "3.13"
