add logging setup using loguru

--- a/.envs/.env.local
+++ b/.envs/.env.local
@@ -10,4 +10,5 @@ POSTGRES_HOST="postgres"
 POSTGRES_PORT="5432"
 POSTGRES_DB="banker"
 POSTGRES_PASSWORD="pass123"
+POSTGRES_USER='root'
 BANK_NAME = 'NextGen Bank'
