--- a/.envs/.env.local
+++ b/.envs/.env.local
@@ -7,8 +7,8 @@ EMAIL_PORT = "1025"
 DEFAULT_FROM_EMAIL = "NextGen Bank <noreply@nextgenbank.com>"
 DOMAIN = "localhost:8080"
 POSTGRES_HOST=postgres
-POSTGRES_PORT="5432"
-POSTGRES_DB="banker"
-POSTGRES_PASSWORD="pass123"
-POSTGRES_USER='root'
+POSTGRES_PORT=5432
+POSTGRES_DB=banker
+POSTGRES_PASSWORD='password'
+POSTGRES_USER=maryus
 BANK_NAME = 'NextGen Bank'
