--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -17,9 +17,9 @@ services:
     networks:
       - banker_local_nw
   postgres:
-#    build:
-#      context: .
-#      dockerfile: ./docker/local/postgres/Dockerfile
+    build:
+      context: .
+      dockerfile: ./docker/local/postgres/Dockerfile
 
     ports:
       - "5432:5432"
@@ -27,15 +27,11 @@ services:
       - banker_local_db:/var/lib/postgresql
     networks:
       - banker_local_nw
-#    env_file:
-#      - ./.envs/.env.local
-    image: postgres
+    env_file:
+      - ./.envs/.env.local
+#    image: postgres
     restart: always
 
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_PASSWORD}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
   mailpit:
     image: docker.io/axllent/mailpit:v1.20.3
